new theming system

--- a/src/pages/2017-10-10-badhinjan-trio/index.fr.mdx
+++ b/src/pages/2017-10-10-badhinjan-trio/index.fr.mdx
@@ -19,6 +19,6 @@ image: post_badhinjan.jpg
   height="1080"
 ></iframe>
 
-[Direct Link](https://www.youtube.com/watch?v=AyRCXbdHzTE)
+[Lien Direct](https://www.youtube.com/watch?v=AyRCXbdHzTE)
 
 Vidéo promotionnelle pour le **[Badhinjan Trio](https://www.facebook.com/BadhinjanTrio/)**.
