--- a/src/pages/2018-03-02-harmonie-des-spheres/index.fr.mdx
+++ b/src/pages/2018-03-02-harmonie-des-spheres/index.fr.mdx
@@ -19,7 +19,7 @@ image: cover.jpg
   allowfullscreen
 ></iframe>
 
-[Direct Link](https://www.youtube.com/watch?v=W2fsqEoim-o)
+[Lien Direct](https://www.youtube.com/watch?v=W2fsqEoim-o)
 
 Court métrage indépendant réalisé et produit par **Vincent Montalieu**.
 
