--- a/src/pages/2018-09-01-humanlapse/index.fr.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.fr.mdx
@@ -40,7 +40,7 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
   height="1080"
 ></iframe>
 
-[Direct Link](https://vimeo.com/292003342)
+[Lien Direct](https://vimeo.com/292003342)
 
 ## Expositions
 
@@ -56,7 +56,7 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
   height="1080"
 ></iframe>
 
-[Direct Link](https://vimeo.com/306033197)
+[Lien Direct](https://vimeo.com/306033197)
 
 ## Scénographie
 
