--- a/src/pages/2018-10-30-innocent-words/index.fr.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.fr.mdx
@@ -21,7 +21,7 @@ embeddedImagesLocal:
   height="1080"
 ></iframe>
 
-[Direct Link](https://www.youtube.com/watch?v=V4CsJzZjhOk)
+[Lien Direct](https://www.youtube.com/watch?v=V4CsJzZjhOk)
 
 Court métrage sur la précarité, réalisé pour le [Mobile Film Festival 2018](https://mobilefilmfestival.com/) _#StandUp4HumanRights_.
 Réalisé en quelques heures avec un smartphone.
