--- a/src/pages/2019-04-01-space-dances/index.fr.mdx
+++ b/src/pages/2019-04-01-space-dances/index.fr.mdx
@@ -19,7 +19,7 @@ image: cover2.jpg
   height="1080"
 ></iframe>
 
-[Direct Link](//vimeo.com/388504943)
+[Lien Direct](//vimeo.com/388504943)
 
 **Space Dances** explore la danse en Réalité Augmentée et Réalité Mixte, en utilisant des technologies et méthodes de captation holographiques à l'état de l'art.
 
