--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -19,7 +19,7 @@ image: cover.jpg
   height="1080"
 ></iframe>
 
-[Direct Link](https://www.youtube.com/watch?v=5gkkIeeAuSU)
+[Lien Direct](https://www.youtube.com/watch?v=5gkkIeeAuSU)
 
 Court métrage indépendant réalisé en une après-midi. Co-réalisé avec **Vincent Montalieu**.
 
