--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -26,8 +26,7 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 
 #### Distinctions, Récompenses, Expositions
 
-- (A venir 2021) [Les Invites](https://invites.villeurbanne.fr/) - Villeurbanne  
-  **Projection [Le Phare](/le-phare#content)**
+- (A venir) A suivre sur [Facebook](http://facebook.com/maxime.touroute) et [Instagram](http://instagram.com/maximetouroute)
 
 - (2021) [Chalon dans la Rue](https://www.chalondanslarue.com/)  
   **Projection [Le Phare](/le-phare#content)**
