--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -26,20 +26,23 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
 
 - (Upcoming Events) Check my [Facebook](http://facebook.com/maxime.touroute) and [Instagram](http://instagram.com/maximetouroute)
 
-- (2021) [Spraying Board (2nd Edition)](https://sprayingboard.thedailyboard.co/)  
-  **Interactive Projection [Live Drawing](/livedrawing#content)**
+- (2021) [Chalon dans la Rue](https://www.chalondanslarue.com/)  
+  **Premiere of [Le Phare](/le-phare#content)**
 
-- (2021) [Lieux Miroir](/spacedances#content) at Aubusson  
-  **City scale AR holographic dance experience**
+- (2021) [Spraying Board (2nd Edition)](https://sprayingboard.thedailyboard.co/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) City scale AR holographic dance experience
+  **[Lieux Miroir](/spacedances#content) at Aubusson**
 
 - (2021) Music Festival - Beijing  
-  **[Monolith](/monolith#content) with the [French Institute](https://www.institutfrancais.com)**
+  **[Monolith](/monolith#content) w [French Institute](https://www.institutfrancais.com)**
 
 - (2020) Novtec - Lima, Peru  
-  **Remote Projection [Live Drawing](/livedrawing#content)**
+  **Remotely controlled Projection [Live Drawing](/livedrawing#content)**
 
 - (2020) Digital November - Copenhagen, Danemark  
-  **Remote Projection [Live Drawing](/livedrawing#content) with the [French Institute](https://www.institutfrancais.com)**
+  **Remotely controlled Projection [Live Drawing](/livedrawing#content) w [French Institute](https://www.institutfrancais.com)**
 
 - (2020) **Pepite des Pépites** award for [Draw From The Window](/drawfromthewindow#content)  
   **Delivered by [Pepite France](https://www.pepite-france.fr/)**
@@ -54,19 +57,19 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
   **Nationwide Interactive Projection during France lockdown**
 
 - (2020) [Spraying Board](https://sprayingboard.thedailyboard.co/)  
-  **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2020) Copenhagen Light Festival  
-  **Performance [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2020) Calgary Winter Lights Festival  
-  **Exhibition [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2020) Lyon Young and Culture House  
-  **Exhibit [Humanlapse](/humanlapseProject#content)**
+  **[Humanlapse](/humanlapseProject#content)**
 
 - (2019) Le Creusot Video Game Festival  
-  **Projection [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2019) Lyon Young Film Festival  
   **Film Projection "Les étoiles du LYF" [Réalité](/realite#content)**
@@ -75,28 +78,28 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
   **Official Selection with [Innocent Words](/innocentWords#content)**
 
 - (2019) Chevagny Art Festival  
-  **Projection [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2019) Toï Toï Le Zinc  
-  **Exhibit [Humanlapse](/humanlapseProject#content)**
+  **[Humanlapse](/humanlapseProject#content)**
 
 - (2019) Festi Lumi Light Festival  
-  **Projection [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2019) Red Cross and Health Film Festival  
   **Official Selection with [Réalité](/realite#content)**
 
 - (2019) Peinture Fraiche Street Art Festival  
-  **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2019) Comete Film Festival  
   **Official Selection [Réalité](/realite#content)**
 
 - (2018) Lyon Light Festival (off)  
-  **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
+  **[Live Drawing Project](/livedrawing#content)**
 
 - (2019) Lyon City Hall  
-  **First Exhibit of [Humanlapse](/humanlapseProject#content)**
+  **Premiere of [Humanlapse](/humanlapseProject#content)**
 
 - (2018) Mobile Film Festival  
   **Official Selection with [Innocent Words](/innocentWords#content)**
