--- a/src/pages/2019-04-01-space-dances/index.fr.mdx
+++ b/src/pages/2019-04-01-space-dances/index.fr.mdx
@@ -29,7 +29,7 @@ image: cover2.jpg
 
 #### Role
 
-- Réalisateur de vidéos holographiques pour la Réalité Augmentée, exploration de nouveaux langages visuels (360°, multi-plan, utlra-large, 3D...)
+- Réalisateur de vidéos holographiques pour la Réalité Augmentée, exploration de nouveaux langages visuels (360°, multi-plan, ultra-large, 3D...)
 - Developpement de workflows de post-production pour Réalité Augmentée
   Development of Augmented Reality post production workflows
 - Conception et developpement de méthodes de rosoctopie en Intelligence Artificielle pour détourer des corps sans fond vert
