New : add content & improve some layout

--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -5,6 +5,7 @@ language: fr
 title: About
 description: A propos de Maxime Touroute
 image: profile.jpg
+priority: 0
 embeddedImagesLocal:
   - profile.jpg
 ---
