--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -5,6 +5,7 @@ language: en
 title: About
 description: About Maxime Touroute
 image: profile.jpg
+priority: 0
 embeddedImagesLocal:
   - profile.jpg
 ---
