--- a/src/pages/photography/index.fr.mdx
+++ b/src/pages/photography/index.fr.mdx
@@ -1,12 +1,13 @@
 ---
 path: /photography
 layout: page
-category: other
+category: portfolio
 language: fr
-title: Photo
-subtitle: Travaux photo
+title: Photographie
+priority: 6
+subtitle: Portfolio
 description: Selection de travaux photo
-image: cover.jpg
+image: experiments/b-22.jpg
 embeddedImagesLocal:
   - experiments/b-22.jpg
   - experiments/b-20.jpg
@@ -50,11 +51,16 @@ embeddedImagesLocal:
   - dailies/b-4.jpg
 ---
 
-A selection of photography works.
+<div style="margin-bottom:2em">
+  <h1 style="text-align: center">Portfolio Photographie</h1>
+  <br />
+</div>
+<hr />
+<br />
+<br />
+<br />
 
 # Experimentations
-
-Serie d'experimentations sur l'utilisation de la lumière et techniques photo
 
 <br />
 
@@ -75,8 +81,6 @@ Serie d'experimentations sur l'utilisation de la lumière et techniques photo
 <ImageGrid props={props} indices={[24, 25, 26, 27, 28, 29]} />
 
 # Dailies
-
-Série lors de balades du quotidien
 
 <br />
 
