--- a/src/pages/photography/index.mdx
+++ b/src/pages/photography/index.mdx
@@ -1,12 +1,13 @@
 ---
 path: /photography
 layout: page
-category: other
+category: portfolio
 language: en
-title: Photo
-subtitle: Photography works
+title: Photography
+priority: 6
+subtitle: Portfolio
 description: A selection of photography works.
-image: cover.jpg
+image: experiments/b-22.jpg
 embeddedImagesLocal:
   - experiments/b-22.jpg
   - experiments/b-20.jpg
@@ -50,11 +51,16 @@ embeddedImagesLocal:
   - dailies/b-4.jpg
 ---
 
-A selection of photography works.
+<div style="margin-bottom:2em">
+  <h1 style="text-align: center">Photography Portfolio</h1>
+  <br />
+</div>
+<hr />
+<br />
+<br />
+<br />
 
 # Experiments
-
-A series of experiments on the usage of lighting and photography techniques
 
 <br />
 
@@ -75,8 +81,6 @@ A series of experiments on the usage of lighting and photography techniques
 <ImageGrid props={props} indices={[24, 25, 26, 27, 28, 29]} />
 
 # Dailies
-
-A collection of shots from the everyday ramblings of life.
 
 <br />
 
