--- a/src/pages/2021-07-15-le-phare/index.fr.mdx
+++ b/src/pages/2021-07-15-le-phare/index.fr.mdx
@@ -5,20 +5,25 @@ category: portfolio
 language: fr
 title: Le Phare
 subtitle: Projection 360°
-description: Installation interactive avec un système de vidéoprojection à 360°. Les enfants sont invités à utiliser une roue de bateau pour controler le faisceau de la projection.
+description: Le Phare est une installation interactive avec un système de vidéoprojection à 360°. Les enfants sont invités à utiliser une roue de bateau pour controler le faisceau de la projection.
 date: '2021-07-15'
-image: cover.jpg
+image: 9.jpg
 priority: 1
 embeddedImagesLocal:
-  - cover.jpg
-  - c.jpg
-  - a.jpg
+  - q.jpg
   - b.jpg
+  - a.jpg
+  - 10.jpg
+  - 6.jpg
+  - 2.jpg
+  - 5.jpg
+  - s.jpg
 ---
 
-![Cover](cover.jpg)
+![Cover](9.jpg)
 
-<ImageGrid props={props} indices={[1, 2, 3]} />
+<ImageGrid props={props}/>
+
 
 Installation interactive avec un système de vidéoprojection à 360°. Les enfants sont invités à utiliser une roue de bateau pour controler le faisceau de la projection.
 
@@ -44,3 +49,6 @@ Chargée de production : Cyrielle Tissandier
 Coproductions : Lieux publics, Centre National des Arts de la Rue et dans l’espace public & Pôle européen de production , Marseille Les Ateliers Frappaz, Centre National des Arts de la Rue et dans l’espace public Villeurbanne, Les Abattoirs, Centre National des Arts de la Rue et dans l’espace public & le Festival Chalon dans la rue Bipolar Production - Le Plan Rhône., Montpellier  
 PRODUCTION : [AADN - Arts et Cultures Numériques](https://aadn.org/)  
 Subventionnée par : SACD / Auteurs d’espaces / Région et DRAC Auvergne Rhône-Alpes / Fonds [SCAN](https://www.auvergnerhonealpes.fr/aide/2/89-fonds-de-soutien-a-la-creation-artistique-numerique-fonds-scan-culture-patrimoine.htm)
+
+  
+Credits Photo: Clement MERLE, Pierre AMOUDRUZ
