--- a/src/pages/2021-07-15-le-phare/index.mdx
+++ b/src/pages/2021-07-15-le-phare/index.mdx
@@ -5,20 +5,26 @@ category: portfolio
 language: en
 title: Le Phare
 subtitle: 360° Projection
-description: Interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
+description: Le Phare is an interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
 date: '2021-07-15'
-image: cover.jpg
+image: 9.jpg
 priority: 1
 embeddedImagesLocal:
-  - cover.jpg
-  - c.jpg
-  - a.jpg
+  - q.jpg
   - b.jpg
+  - a.jpg
+  - 10.jpg
+  - 6.jpg
+  - 2.jpg
+  - 5.jpg
+  - s.jpg
 ---
 
-![Cover](cover.jpg)
+![Cover](9.jpg)
 
-<ImageGrid props={props} indices={[1, 2, 3]} />
+<ImageGrid props={props} />{' '}
+
+
 
 Interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
 
@@ -44,3 +50,6 @@ Production delegate : Cyrielle Tissandier
 Co-Productions : Lieux publics, Centre National des Arts de la Rue et dans l’espace public & Pôle européen de production , Marseille Les Ateliers Frappaz, Centre National des Arts de la Rue et dans l’espace public Villeurbanne, Les Abattoirs, Centre National des Arts de la Rue et dans l’espace public & le Festival Chalon dans la rue Bipolar Production - Le Plan Rhône., Montpellier  
 Production : [AADN - Arts et Cultures Numériques](https://aadn.org/)  
 Grants by : SACD / Auteurs d’espaces / Région et DRAC Auvergne Rhône-Alpes / Fonds [SCAN](https://www.auvergnerhonealpes.fr/aide/2/89-fonds-de-soutien-a-la-creation-artistique-numerique-fonds-scan-culture-patrimoine.htm)
+
+
+Photo Credits: Clement MERLE, Pierre AMOUDRUZ
