Fix : missing link

--- a/src/pages/2020-01-01-deep-roto/index.fr.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.fr.mdx
@@ -20,8 +20,6 @@ embeddedImagesLocal:
   height="1080"
 ></iframe>
 
-<br />
-<br />
-<br />
+[Lien Direct](https://www.linkedin.com/feed/update/urn:li:activity:6768091473599627264/)
 
 Logiciel exploitant des algorithmes mathématiques et d'Intelligence Artificielle à l'état de l'art pour faire le **détourage de vidéos sans fond vert**.
