--- a/src/pages/2020-01-01-deep-roto/index.mdx
+++ b/src/pages/2020-01-01-deep-roto/index.mdx
@@ -20,8 +20,6 @@ embeddedImagesLocal:
   height="1080"
 ></iframe>
 
-<br />
-<br />
-<br />
+[Direct Link](https://www.linkedin.com/feed/update/urn:li:activity:6768091473599627264/)
 
 Software using state of the art mathematics and artificial intelligence to **detour videos without the need for green screen**.
