New : latest events

--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -21,11 +21,32 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
 
 **Currently open to new projects**
 
-— Get in touch at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+— [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
 
 #### Distinctions, Awards, Exhibitions
 
 - (Upcoming Events) Check my [Facebook](http://facebook.com/maxime.touroute) and [Instagram](http://instagram.com/maximetouroute)
+
+- (2021) [Le Phare à Marseille // Lieux Publics](https://www.lieuxpublics.com/fr/agenda/residence-le-phare)  
+  **[Le Phare](/le-phare#content)**
+
+- (2021) [Salon du livre jeunesse de Troyes](https://lecture-loisirs.com/salon/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [Festival Des Blocs](https://desblocs.be/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) Nuit de la Création, la Motte Servolex  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [L’Aventure Ordinaire #7 // CCO Villeurbanne](https://www.cco-villeurbanne.org/laventure-ordinaire-7/)  
+  **[Space Dances](/spacedances#content)**
+
+- (2021) [Culture Night](https://culturenight.ie/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [Les Invites de Villeurbanne](https://invites.villeurbanne.fr/)  
+  **[Le Phare](/le-phare#content)**
 
 - (2021) [Chalon dans la Rue](https://www.chalondanslarue.com/)  
   **Premiere of [Le Phare](/le-phare#content)**
