--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -23,11 +23,33 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 
 **Ouvert aux nouveaux projets**
 
-— Contactez moi sur [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
+— [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
 
 #### Distinctions, Récompenses, Expositions
 
 - (A venir) A suivre sur [Facebook](http://facebook.com/maxime.touroute) et [Instagram](http://instagram.com/maximetouroute)
+
+
+- (2021) [Le Phare à Marseille // Lieux Publics](https://www.lieuxpublics.com/fr/agenda/residence-le-phare)  
+  **[Le Phare](/le-phare#content)**
+
+- (2021) [Salon du livre jeunesse de Troyes](https://lecture-loisirs.com/salon/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [Festival Des Blocs](https://desblocs.be/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) Nuit de la Création, la Motte Servolex  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [L’Aventure Ordinaire #7 // CCO Villeurbanne](https://www.cco-villeurbanne.org/laventure-ordinaire-7/)  
+  **[Space Dances](/spacedances#content)**
+
+- (2021) [Culture Night](https://culturenight.ie/)  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [Les Invites de Villeurbanne](https://invites.villeurbanne.fr/)  
+  **[Le Phare](/le-phare#content)**
 
 - (2021) [Chalon dans la Rue](https://www.chalondanslarue.com/)  
   **Premiere of [Le Phare](/le-phare#content)**
