New : typos & last events

--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -29,6 +29,14 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 
 - (A venir) A suivre sur [Facebook](http://facebook.com/maxime.touroute) et [Instagram](http://instagram.com/maximetouroute)
 
+- (2021) Mapping décentralisé multi-lieux, Nantes
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) Fête des Lumières de Bron
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [Festival Pléiades St Etienne](https://www.saint-etienne.fr/pl%C3%A9iades-festival-des-arts-num%C3%A9riques)  
+  **[Live Drawing](/livedrawing#content)**
 
 - (2021) [Le Phare à Marseille // Lieux Publics](https://www.lieuxpublics.com/fr/agenda/residence-le-phare)  
   **[Le Phare](/le-phare#content)**
