--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -27,6 +27,15 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
 
 - (Upcoming Events) Check my [Facebook](http://facebook.com/maxime.touroute) and [Instagram](http://instagram.com/maximetouroute)
 
+- (2021) Mapping décentralisé multi-lieux, Nantes
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) Fête des Lumières de Bron
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) [Festival Pléiades St Etienne](https://www.saint-etienne.fr/pl%C3%A9iades-festival-des-arts-num%C3%A9riques)  
+  **[Live Drawing](/livedrawing#content)**
+
 - (2021) [Le Phare à Marseille // Lieux Publics](https://www.lieuxpublics.com/fr/agenda/residence-le-phare)  
   **[Le Phare](/le-phare#content)**
 
