New : Smart faune, fix indice50, update about page

--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -27,12 +27,34 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 
 #### Distinctions, Récompenses, Expositions
 
-- (A venir) A suivre sur [Facebook](http://facebook.com/maxime.touroute) et [Instagram](http://instagram.com/maximetouroute)
+- (A venir) A suivre sur [Instagram](http://instagram.com/maximetouroute)
 
-- (2021) Mapping décentralisé multi-lieux, Nantes
+
+- (2022) Smart Faune, Naïf Production  
+  **Développement d'un outil de streaming audio à latence ultra-faible**
+
+- (2022) Digital November, Mapping à distance, Yanhon, Birmanie  
   **[Live Drawing](/livedrawing#content)**
 
-- (2021) Fête des Lumières de Bron
+- (2022) Exposition, mapping, Johannesbourg, Afrique du Sud  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2022) Festival de la Science, Exposition Réalité Augmentée
+  **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
+
+- (2022) **Prix Pépite Ile-De-France pour [Reveality](https://www.reveality.io/)  
+  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
+
+- (2022) Mapping sur Dôme, Plemeur-Bodou  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2022) Mapping et Atelier, Tunis, Tunisie  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2022) Mapping décentralisé multi-lieux, Nantes  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) Fête des Lumières de Bron  
   **[Live Drawing](/livedrawing#content)**
 
 - (2021) [Festival Pléiades St Etienne](https://www.saint-etienne.fr/pl%C3%A9iades-festival-des-arts-num%C3%A9riques)  
