--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -12,14 +12,14 @@ image: cover.jpg
 ---
 
 <iframe
-  src="https://www.youtube.com/embed/5gkkIeeAuSU?rel=0"
+  src="https://youtu.be/uABiceoBysY?rel=0"
   frameborder="0"
   allowfullscreen
   width="1920"
   height="1080"
 ></iframe>
 
-[Lien Direct](https://www.youtube.com/watch?v=5gkkIeeAuSU)
+[Lien Direct](https://youtu.be/uABiceoBysY)
 
 Court métrage indépendant réalisé en une après-midi. Co-réalisé avec **Vincent Montalieu**.
 
