New : Smart faune, fix indice50, update about page

--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -30,8 +30,8 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 - (A venir) A suivre sur [Instagram](http://instagram.com/maximetouroute)
 
 
-- (2022) Smart Faune, Naïf Production  
-  **Développement d'un outil de streaming audio à latence ultra-faible**
+- (2022) Résidence à la Maison des Métallos, Paris  
+ **Développement de [Smart Faune](/smart-faune#content) Produit par [Naïf Production](//naif-production.fr)**  
 
 - (2022) Digital November, Mapping à distance, Yanhon, Birmanie  
   **[Live Drawing](/livedrawing#content)**
@@ -39,11 +39,11 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 - (2022) Exposition, mapping, Johannesbourg, Afrique du Sud  
   **[Live Drawing](/livedrawing#content)**
 
-- (2022) Festival de la Science, Exposition Réalité Augmentée
+- (2022) Festival de la Science, Exposition Réalité Augmentée  
   **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
 
 - (2022) **Prix Pépite Ile-De-France pour [Reveality](https://www.reveality.io/)  
-  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
+  **Remis par [Pepite France](https://www.pepite-france.fr/)**
 
 - (2022) Mapping sur Dôme, Plemeur-Bodou  
   **[Live Drawing](/livedrawing#content)**
