--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -25,12 +25,33 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
 
 #### Distinctions, Awards, Exhibitions
 
-- (Upcoming Events) Check my [Facebook](http://facebook.com/maxime.touroute) and [Instagram](http://instagram.com/maximetouroute)
+- (Upcoming Events) Check my [Instagram](http://instagram.com/maximetouroute)
 
-- (2021) Mapping décentralisé multi-lieux, Nantes
+- (2022) Art Residency at la Maison des Métallos, Paris  
+ **[Smart Faune](/smart-faune#content)**  
+
+- (2022) Digital November, Remote Mapping, Yanhon, Myanmar  
   **[Live Drawing](/livedrawing#content)**
 
-- (2021) Fête des Lumières de Bron
+- (2022) Exhibition, mapping, Johannesbourg, South Africa  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2022) Festival de la Science, Exposition Réalité Augmentée  
+  **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
+
+- (2022) **Pépite Prize Ile-De-France for [Reveality](https://www.reveality.io/)  
+  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
+
+- (2022) Dome Mapping, Plemeur-Bodou  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2022) Mapping & Workshop, Tunis, Tunisie  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2022) Decentralised Mapping in multiple locations, Nantes  
+  **[Live Drawing](/livedrawing#content)**
+
+- (2021) Bron Light Festival  
   **[Live Drawing](/livedrawing#content)**
 
 - (2021) [Festival Pléiades St Etienne](https://www.saint-etienne.fr/pl%C3%A9iades-festival-des-arts-num%C3%A9riques)  
