--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -52,7 +52,7 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
   
 ## Production
 
-Conception, Réalisation : [Naïf Production](//https://naif-production.fr/)  
+Conception, Réalisation : [Naïf Production](//naif-production.fr/)  
 Développement informatique :  Maxime Touroute, Rémy Dupanloup  
 Création musicale : Christophe Ruetsch  
 Coproduction : [La Maison des métallos](//www.maisondesmetallos.paris/)  
