--- a/src/pages/2022-07-01-smart-faune/index.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.mdx
@@ -51,7 +51,7 @@ The musician can emit one or multiple stereo signals directly from its Live musi
   
 ## Production
 
-Created by : [Naïf Production](//https://naif-production.fr/)  
+Created by : [Naïf Production](//naif-production.fr/)  
 Software development :  Maxime Touroute, Rémy Dupanloup  
 Music : Christophe Ruetsch  
 Coproduction : [La Maison des métallos, Paris](//www.maisondesmetallos.paris/)  
