--- a/src/pages/2022-09-01-painting-mirror/index.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.mdx
@@ -47,7 +47,7 @@ Photos: Courtesy of French Embassy in Ireland – [Dora Kazmierak](https://www.d
 
 ## Production
 
-Tom VENIAT, Maxime TOUROUTE
+Tom VENIAT, Maxime TOUROUTE, Rémy DUPANLOUP
 
 ## Booking
 
