New : audio broadcaster, live-maker

--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -46,7 +46,7 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
 <ImageGrid props={props} />{' '}
   
 
-### Cette technologie vous intéresse ? [Contactez-moi](mailto:maxime.touroute@gmail.com)
+### Cette technologie vous intéresse ? [Plus d'infos ici](/audio-broadcaster)
 
 
   
