--- a/src/pages/2022-07-01-smart-faune/index.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.mdx
@@ -43,9 +43,9 @@ The musician can emit one or multiple stereo signals directly from its Live musi
 
 
 <ImageGrid props={props} />{' '}
-  
 
-### Interested in this tech ? [Contact me](mailto:maxime.touroute@gmail.com)
+
+### Interested in this tech ? [More infos here](/audio-broadcaster)
 
 
   
