--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -29,6 +29,7 @@ Je n'ai pas peur d'apprendre de nouveaux outils pour ouvrir de nouvelles possibi
 
 - (A venir) A suivre sur [Instagram](http://instagram.com/maximetouroute)
 
+- (2023) Exposition en Réalité Augmentée, Lyon  
 
 - (2022) Résidence à la Maison des Métallos, Paris  
  **Développement de [Smart Faune](/smart-faune#content) Produit par [Naïf Production](//naif-production.fr)**  
