--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -27,6 +27,9 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
 
 - (Upcoming Events) Check my [Instagram](http://instagram.com/maximetouroute)
 
+
+- (2023) Augmented Reality Exhibition, Lyon  
+
 - (2022) Art Residency at la Maison des Métallos, Paris  
  **[Smart Faune](/smart-faune#content)**  
 
