New : beginning upgrade to v5

--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -16,7 +16,7 @@ embeddedImagesLocal:
 ---
 
 
-  
+  {/*
 <iframe
   src="https://www.youtube.com/embed/1gm_-xeVMs0"
   frameborder="0"
@@ -24,6 +24,7 @@ embeddedImagesLocal:
   width="1920"
   height="1080"
 ></iframe>
+*/}
 
 [Lien Direct](https://www.youtube.com/watch?v=1gm_-xeVMs0)
 
@@ -34,7 +35,7 @@ La performance _Smart Faune_ invite le public à danser dans l'espace public en 
 
 Conception et développement d'un __logiciel de broadcast audio__ avec les caractéristiques suivantes : 
 - Audio stéréo HD
-- Latence ultra-faible <100ms en 4G, <10ms en Wi-Fi
+- Latence ultra-faible  {'<'}100ms en 4G,  {'<'}10ms en Wi-Fi
 - Fonctionnel en 4G (pour le public et le musicien)
 - Jauge : 100+ participants
 - Pas besoin de matériel spécifique (ordinateur standard, smartphones)
