--- a/src/pages/2022-07-01-smart-faune/index.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.mdx
@@ -16,14 +16,14 @@ embeddedImagesLocal:
 ---
 
 
-  
+    {/*
 <iframe
   src="https://www.youtube.com/embed/1gm_-xeVMs0"
   frameborder="0"
   allowfullscreen
   width="1920"
   height="1080"
-></iframe>
+></iframe>*/}
 
 [Direct Link](https://www.youtube.com/watch?v=1gm_-xeVMs0)
 
@@ -34,7 +34,7 @@ The _Smart Faune_ performance invites volunteers to dance in the public space by
 
 Conception and Development of an __audio broadcast software__ with the following features : 
 - HD Audio
-- Ultra-low latency <100ms for cellular network, <10ms for Wi-Fi
+- Ultra-low latency {'<'}100ms for cellular network, {'<'}10ms for Wi-Fi
 - Works in 4G (for the participants and the musician broadcasting)
 - Up to 100+ users
 - Works with a laptop or smartphone, no other equipment required
