--- a/src/pages/grading-showcase/index.mdx
+++ b/src/pages/grading-showcase/index.mdx
@@ -41,9 +41,10 @@ embeddedImagesLocal:
 <div style="margin-bottom:2em">
 <h1 style="text-align: center">Color Grading works</h1>
 
-<!-- <p style="text-align: center"><em>Color grading is comparable to the process of developing photos.
+{/* <p style="text-align: center"><em>Color grading is comparable to the process of developing photos.
 It's a meticulous work of bringing images to life to enhance the emotions they carry.
 {' '} <strong>Balance </strong> and <strong>accuracy</strong> are as important as <strong>artistic style</strong> because you don't only add a mood to the image, you also guide the audience's gaze to elements in the frame. In today's world where we are surrounded by screens of different sizes and color restitutions, grading is also about making sure every watcher can have the best viewing experience on all types of devices.</em></p> -->
+*/}
 
 <br/>
 </div>
