--- a/src/pages/2023-03-01-audio-broadcaster/index.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.mdx
@@ -29,7 +29,7 @@ The software allows simple real-time audio transmission to smartphones without t
 
 ## Main features 
 - HD Audio
-- Ultra-low latency <100ms for cellular network, <10ms for Wi-Fi
+- Ultra-low latency  {'<'}100ms for cellular network,  {'<'}10ms for Wi-Fi
 - Works in 4G (for the listeners and the broadcaster)
 - Up to 100+ users
 - No specific equipment required (laptop, smartphones)
