Fix : mdx v2 rendering

--- a/src/pages/2018-09-01-humanlapse/index.fr.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.fr.mdx
@@ -62,4 +62,4 @@ Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des
 
 Cadres photo numériques, chacun jouant en boucle une vidéo humanlapse. Les cadres sont autonomes : ils s'allument le matin et s'éteignent le soir. Ils peuvent être accrochés sur des pieds ou au mur pour que les visiteurs puissent voir les cadres comme dans une exposition photo.
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
