--- a/src/pages/2018-09-01-humanlapse/index.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.mdx
@@ -52,7 +52,7 @@ Photography project aiming to explore usage of timelapse and hyperlapse techniqu
 
 Digital photo frames, each one looping a single humanlapse video. The frames are fully autonomous, turning on in the morning and turning off in the evening. They can be fixed on poles or walls so visitors can walk around each humanlapse as they would for a photo exhibition.
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
 <iframe
   src="https://player.vimeo.com/video/306033197"
