--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -21,7 +21,7 @@ embeddedImagesLocal:
   - 6.jpg
 ---
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
 Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.  
 Plus d'informations sur le site officiel [Live Drawing Project](//thelivedrawingproject.com).
