--- a/src/pages/2018-11-30-the-live-drawing-project/index.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.mdx
@@ -21,7 +21,7 @@ embeddedImagesLocal:
   - 6.jpg
 ---
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
 A digital arts project about experiencing the possibilities of collaborative and live drawing.
 More informations about it on the official website [Live Drawing Project](//thelivedrawingproject.com).
