--- a/src/pages/2020-01-01-babel/index.fr.mdx
+++ b/src/pages/2020-01-01-babel/index.fr.mdx
@@ -16,7 +16,7 @@ embeddedImagesLocal:
 
 ![Cover](b-4.jpg)
 
-<ImageGrid props={props} indices={[0]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0]} />
 
 Jeu multijoueur vidéoprojeté où le public essaie de construire la plus haute tour.
 
