--- a/src/pages/2020-01-01-babel/index.mdx
+++ b/src/pages/2020-01-01-babel/index.mdx
@@ -16,7 +16,7 @@ embeddedImagesLocal:
 
 ![Cover](b-4.jpg)
 
-<ImageGrid props={props} indices={[0]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0]} />
 
 Multiplayer projected game in which the public tries to build the tallest tower.
 
