--- a/src/pages/2020-04-01-draw-from-the-window/index.fr.mdx
+++ b/src/pages/2020-04-01-draw-from-the-window/index.fr.mdx
@@ -23,7 +23,7 @@ embeddedImagesLocal:
 
 ![Picture of a videoprojection on the 26th of April](26v_5_webw.jpg)
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
 Système de vidéoprojection décentralisé pour ramener l'art dans les zones résidentielles pendant les confinements. Les habitants du monde entier peuvent prendre leur vidéoprojecteur de salon et projeter [l'installation Live Drawing](https://thelivedrawingproject.com) à leur fenêtre, sans prérequis en videomapping.
 
