--- a/src/pages/2020-04-01-draw-from-the-window/index.mdx
+++ b/src/pages/2020-04-01-draw-from-the-window/index.mdx
@@ -23,7 +23,7 @@ embeddedImagesLocal:
 
 ![Picture of a videoprojection on the 26th of April](26v_5_webw.jpg)
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
 Decentralised videoprojection system to bring art at the doorstep of residential areas during lockdowns. People all over the world can take their living room projector and project the [Live Drawing Installation](https://thelivedrawingproject.com) from their window without prior knowledge in videomapping.
 
