--- a/src/pages/2021-06-01-cadre-de-rue/index.fr.mdx
+++ b/src/pages/2021-06-01-cadre-de-rue/index.fr.mdx
@@ -17,7 +17,7 @@ embeddedImagesLocal:
 
 ![Cover](4.jpg)
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 Chaque cadre contient un secret. Les passants sont invités à prendre leur téléphone pour viser le cadre avec la caméra. La toile se dévoile alors à travers l’écran du téléphone, en Réalité Augmentée.
 
