--- a/src/pages/2021-06-01-cadre-de-rue/index.mdx
+++ b/src/pages/2021-06-01-cadre-de-rue/index.mdx
@@ -17,7 +17,7 @@ embeddedImagesLocal:
 
 ![Cover](4.jpg)
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 Each frame contains a secret. Passersby are invited to take their phone and aim at the frame with the camera. The artwork appears through the screen, in Augmented Reality.
 
