--- a/src/pages/2021-07-15-le-phare/index.fr.mdx
+++ b/src/pages/2021-07-15-le-phare/index.fr.mdx
@@ -22,7 +22,7 @@ embeddedImagesLocal:
 
 ![Cover](9.jpg)
 
-<ImageGrid props={props} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
 Installation interactive avec un système de vidéoprojection à 360°. Les enfants sont invités à utiliser une roue de bateau pour controler le faisceau de la projection.
 
