--- a/src/pages/2021-07-15-le-phare/index.mdx
+++ b/src/pages/2021-07-15-le-phare/index.mdx
@@ -22,7 +22,7 @@ embeddedImagesLocal:
 
 ![Cover](9.jpg)
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 Interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
 
