--- a/src/pages/2022-07-01-smart-faune/index.fr.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.fr.mdx
@@ -44,7 +44,7 @@ Le musicien peut émettre un ou plusieurs signaux stéréo depuis son logiciel d
 Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio live immédiatement. Il n'y a pas besoin d'installer d'application.
   
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
   
 
 ### Cette technologie vous intéresse ? [Plus d'infos ici](/audio-broadcaster)
