--- a/src/pages/2022-07-01-smart-faune/index.mdx
+++ b/src/pages/2022-07-01-smart-faune/index.mdx
@@ -42,7 +42,7 @@ Conception and Development of an __audio broadcast software__ with the following
 The musician can emit one or multiple stereo signals directly from its Live music software (FL, Ableton, ...). The audience opens a web page (or scans a QRCode) on their phone and receive the audio immediately. There is no need to download an app.
 
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 
 ### Interested in this tech ? [More infos here](/audio-broadcaster)
