--- a/src/pages/2022-09-01-painting-mirror/index.fr.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.fr.mdx
@@ -36,7 +36,7 @@ Le public a le temps de photographier sa projection et peut récupérer sa photo
 Les styles sont générés par une Intelligence Artificielle.
 L'installation s'adapte à chaque représentation pour utiliser le style d'artistes en lien avec l'événement ou la collection exposée.
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 
 
