--- a/src/pages/2022-09-01-painting-mirror/index.mdx
+++ b/src/pages/2022-09-01-painting-mirror/index.mdx
@@ -37,7 +37,7 @@ Participants can take a picture of the projected wall or get a printed or digita
 Styles are originally created by an Artificial Inteligence developed for the project. Styles are created for the event context or current exhibitions.
 
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
 
 
 
