--- a/src/pages/2023-01-01-la-bulle/index.fr.mdx
+++ b/src/pages/2023-01-01-la-bulle/index.fr.mdx
@@ -27,7 +27,7 @@ Les participants peuvent envoyer des photos et messages depuis leur téléphone 
 
   
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
   
 
 ### Cette technologie vous intéresse ? [Contactez-moi](mailto:maxime.touroute@gmail.com)
