--- a/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.fr.mdx
@@ -54,7 +54,7 @@ Le public ouvre une page web (ou scanne un QRCode) et reçoit le signal audio li
 <br/>
 <br/>
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
   
 
 ### Accès sur demande à [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
