--- a/src/pages/2023-03-01-audio-broadcaster/index.mdx
+++ b/src/pages/2023-03-01-audio-broadcaster/index.mdx
@@ -60,7 +60,7 @@ There is no app to download.
 <br/>
 <br/>
 
-<ImageGrid props={props} />{' '}
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />{' '}
   
 
 ### Ask for access at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
