--- a/src/pages/grading-showcase/index.mdx
+++ b/src/pages/grading-showcase/index.mdx
@@ -53,31 +53,31 @@ It's a meticulous work of bringing images to life to enhance the emotions they c
 <br/>
 <br/>
 
-<ImageCompare props={props} indices={[0, 1]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0, 1]} />
 
-<ImageCompare props={props} indices={[2, 3]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[2, 3]} />
 
-<ImageCompare props={props} indices={[4, 5]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[4, 5]} />
 
-<ImageCompare props={props} indices={[6, 7]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[6, 7]} />
 
-<ImageCompare props={props} indices={[8, 9]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[8, 9]} />
 
-<ImageCompare props={props} indices={[10, 11]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[10, 11]} />
 
-<ImageCompare props={props} indices={[12, 13]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[12, 13]} />
 
-<ImageCompare props={props} indices={[14, 15]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[14, 15]} />
 
-<ImageCompare props={props} indices={[16, 17]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[16, 17]} />
 
-<ImageCompare props={props} indices={[18, 19]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[18, 19]} />
 
-<ImageCompare props={props} indices={[20, 21]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[20, 21]} />
 
-<ImageCompare props={props} indices={[22, 23]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[22, 23]} />
 
-<ImageCompare props={props} indices={[24, 25]} />
+<ImageCompare props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[24, 25]} />
 
 Stills taken from (in order of appearance):
 
