--- a/src/pages/photography/index.mdx
+++ b/src/pages/photography/index.mdx
@@ -64,26 +64,26 @@ embeddedImagesLocal:
 
 <br />
 
-<ImageGrid props={props} indices={[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]} />
 
 # Portraits
 
-<ImageGrid props={props} indices={[12, 13, 14, 15, 16, 17]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[12, 13, 14, 15, 16, 17]} />
 
 # Landscapes
 
-<ImageGrid props={props} indices={[18, 19, 20, 21, 22, 23]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[18, 19, 20, 21, 22, 23]} />
 
 # Architecture
 
 <br />
 
-<ImageGrid props={props} indices={[24, 25, 26, 27, 28, 29]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[24, 25, 26, 27, 28, 29]} />
 
 # Dailies
 
 <br />
 
-<ImageGrid props={props} indices={[30, 31, 32, 33, 34, 35]} />
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[30, 31, 32, 33, 34, 35]} />
 
 More on [Instagram](https://instagram.com/maximetouroute).
